tried to fix spacing issues around the iframe, think its the iframe not the css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,12 @@ margin-left:25px;
 margin-bottom:25px;
 }
 
+#curSong
+{
+margin-top:20px;
+margin-bottom:20px;
+}
+
 .input
 {
 text-shadow:0px 1px 0px #ffffff;
